--- a/homework13/style.scss
+++ b/homework13/style.scss
@@ -68,7 +68,6 @@ $light-accent: #18A0FB;
 
             svg {
                 stroke: #2C2C2C;
-
             }
         }
 
@@ -84,6 +83,14 @@ $light-accent: #18A0FB;
 
         &-orange {
             background-color: #FF3E1D;
+
+            svg {
+                stroke: #FFF;
+            }
+        }
+
+        &-green {
+            background-color: #00D200;
 
             svg {
                 stroke: #FFF;
@@ -112,17 +119,29 @@ $light-accent: #18A0FB;
 
     &--size {
         &-56 {
-            width: 56px;
+            width: 3.5rem;
         }
 
         &-134 {
-            width: 134px;
+            width: 8.375rem;
         }
 
         &-small {
-            width: 111px;
-            height: 36px;
-            font-size: 13px;
+            width: 6.93rem;
+            height: 2.25rem;
+            font-size: 0.8rem;
+        }
+
+        &-roundSmall {
+            border-radius: 50%;
+            width: 2.25rem;
+            height: 2.25rem;
+        }
+
+        &-roundBig {
+            border-radius: 50%;
+            width: 3rem;
+            height: 3rem;
         }
     }
 
