--- a/homework12/style.css
+++ b/homework12/style.css
@@ -299,6 +299,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    row-gap: 1rem;
   }
   .main .product_container {
     padding: 100px 0;
@@ -346,6 +347,7 @@
         -ms-flex-direction: column;
             flex-direction: column;
     row-gap: 2rem;
+    padding: 20px 0;
   }
   .footer .footer_bottom {
     -webkit-box-orient: vertical;
