--- a/homework12/style.scss
+++ b/homework12/style.scss
@@ -302,6 +302,7 @@ $main-blue-300: #929ECC;
 
     .nav {
         flex-direction: column;
+        row-gap: 1rem;
     }
 
     .main .product_container {
@@ -353,7 +354,7 @@ $main-blue-300: #929ECC;
         .footer_top {
             flex-direction: column;
             row-gap: 2rem;
-
+            padding: 20px 0;
         }
 
         .footer_bottom {
