--- a/homeworkFinal/style.scss
+++ b/homeworkFinal/style.scss
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Playfair+Display&family=Poppins:wght@300;400;600;700&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
 $yellow-subtitle: #D3BA74;
 
 html {
@@ -13,6 +19,7 @@ html {
 .wrapper {
     display: flex;
     flex-direction: column;
+    // background: linear-gradient(0deg, #0A1E27 0%, rgba(10, 30, 39, 0.40) 42.19%, rgba(10, 30, 39, 0.00) 68.23%);
 }
 
 ._container {
@@ -24,11 +31,20 @@ html {
 .header {
     height: 100vh;
     width: 100%;
-    background: url("../homeworkFinal/img/bg.png");
+    background: url("../homeworkFinal/img/bg.png") lightgray 50%;
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    // background-attachment: fixed;
+    padding-top: 20px;
+
+    &__subtitle {
+        margin-left: 0;
+    }
+
+    &__subtitle::before {
+        display: none;
+    }
 }
 
 .logo_link {
@@ -43,18 +59,35 @@ html {
 .title {
     color: #FFF;
     font-family: Playfair Display;
-    font-size: 6.25rem;
+    font-size: 4.375rem;
     font-weight: 400;
     line-height: 1;
 }
 
 .subtitle {
-    color: #D3BA74;
+    color: $yellow-subtitle;
     font-size: 1.25rem;
     font-weight: 700;
     line-height: 1.1;
     /* 110% */
     letter-spacing: 4.8px;
+    position: relative;
+
+    &-right {
+        margin-left: 51px;
+    }
+
+
+    &::before {
+        content: "";
+        position: absolute;
+        width: 51px;
+        height: 2px;
+        background-color: $yellow-subtitle;
+        top: 50%;
+        left: -56px;
+        z-index: 5;
+    }
 }
 
 .text {
@@ -79,12 +112,21 @@ html {
     cursor: pointer;
 }
 
+.digit {
+    color: rgba(255, 255, 255, 0.13);
+    font-size: 11.25rem;
+    font-weight: 600;
+    line-height: 1.5;
+    /* 270px */
+}
+
 .header__container {
     max-width: 40%;
     margin-top: 11.75rem;
 
     .header__title {
         margin-bottom: 8px;
+        font-size: 6.25rem;
     }
 
     .header__text {
@@ -94,4 +136,27 @@ html {
 
 .main {
     flex: 0 1 auto;
+    background-color: #0A1E27;
+
+    .one {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+
+
+
+        &__container {
+            margin: 160px 0 0 160px;
+        }
+
+        &__digit {
+            position: absolute;
+            top: 20px;
+            left: 0;
+        }
+
+        &__title {
+            margin: 12px 0 20px 0;
+        }
+    }
 }
