--- a/homeworkFinal/style.css
+++ b/homeworkFinal/style.css
@@ -141,9 +141,19 @@ html {
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .main .one__container {
   margin: 160px 0 0 160px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .main .one__digit {
   position: absolute;
