--- a/homeworkFinal/style.css
+++ b/homeworkFinal/style.css
@@ -2,11 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Playfair+Display&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Playfair+Display&family=Poppins:wght@300;400;600;700&display=swap");
 * {
-  margin: 0;
-  padding: 0;
-}
-
-html {
   font-family: "Major Mono Display", monospace;
   font-family: "Playfair Display", serif;
   font-family: "Poppins", sans-serif;
@@ -88,6 +83,7 @@ html {
   color: rgba(255, 255, 255, 0.8);
   font-weight: 300;
   line-height: 1.5;
+  font-family: Poppins;
   /* 150% */
 }
 
@@ -112,6 +108,7 @@ html {
   font-size: 11.25rem;
   font-weight: 600;
   line-height: 1.5;
+  font-family: Poppins;
   /* 270px */
 }
 
