--- a/homework13/style.scss
+++ b/homework13/style.scss
@@ -132,6 +132,16 @@ $light-accent: #18A0FB;
             font-size: 0.8rem;
         }
 
+        &-square {
+            width: 3rem;
+            height: 2.25rem;
+        }
+
+        &-squaresml {
+            width: 3.625rem;
+            height: 2.25rem;
+        }
+
         &-roundSmall {
             border-radius: 50%;
             width: 2.25rem;
@@ -142,6 +152,17 @@ $light-accent: #18A0FB;
             border-radius: 50%;
             width: 3rem;
             height: 3rem;
+        }
+
+        &-tagbig {
+            width: 4.06rem;
+            height: 1.75rem;
+            font-size: 0.8rem;
+        }
+
+        &-tagsmall {
+            width: 3.19rem;
+            height: 1.75rem;
         }
     }
 
@@ -203,4 +224,11 @@ $light-accent: #18A0FB;
         gap: 80px;
     }
 
+}
+
+.tag__buttons {
+    display: flex;
+    width: 15%;
+    flex-wrap: wrap;
+    gap: 5px;
 }
