--- a/homework13/style.css
+++ b/homework13/style.css
@@ -242,3 +242,14 @@ hgroup {
       flex-wrap: wrap;
   gap: 5px;
 }
+.tag__buttons .tag__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
