--- a/homeworkFinal/style.css
+++ b/homeworkFinal/style.css
@@ -15,16 +15,18 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow: hidden;
+  background: #0A1E27;
 }
 
 ._container {
   max-width: 1260px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 15px;
 }
 
 .header {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background: url("../homeworkFinal/img/bg.png") lightgray 50%;
   background-position: top center;
@@ -111,6 +113,11 @@
   font-family: Poppins;
   /* 270px */
 }
+.digit-absolute {
+  position: absolute;
+  top: 20px;
+  left: 0;
+}
 
 .header__container {
   max-width: 40%;
@@ -128,9 +135,9 @@
   -webkit-box-flex: 0;
       -ms-flex: 0 1 auto;
           flex: 0 1 auto;
-  background-color: #0A1E27;
 }
-.main .one {
+.main .one,
+.main .three {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,21 +149,123 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 80px;
 }
-.main .one__container {
-  margin: 160px 0 0 160px;
+.main .one__container,
+.main .three__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  gap: 10px;
+  position: relative;
 }
-.main .one__digit {
-  position: absolute;
-  top: 20px;
-  left: 0;
+.main .one__head,
+.main .three__head {
+  padding: 160px 0 0 160px;
 }
-.main .one__title {
+.main .one__title,
+.main .three__title {
   margin: 12px 0 20px 0;
+}
+.main .one__img_item,
+.main .three__img_item {
+  max-width: 100%;
+}
+.main .one__img,
+.main .three__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+.main .one__listimg,
+.main .three__listimg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
+  margin: 60px 0;
+}
+.main .one__listimg .one__items,
+.main .three__listimg .one__items {
+  width: 299px;
+  height: 197px;
+}
+.main .two {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 150px;
+  gap: 20px;
+}
+.main .two__content {
+  position: relative;
+  padding: 130px 0 0 212px;
+}
+.main .two__title {
+  margin-bottom: 20px;
+}
+.main .two__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+.main .two__img-item {
+  max-width: 100%;
+}
+.main .total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 6.25rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 25.8rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.main .total__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.main .total__subtitle::before {
+  display: none;
+}
+.main .total__digit {
+  font-size: 6.25rem;
+  line-height: 6.875rem;
+}
+.main .explore {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 7.87rem;
+  padding: 5rem 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
