--- a/homeworkFinal/style.scss
+++ b/homeworkFinal/style.scss
@@ -16,23 +16,23 @@ $yellow-subtitle: #D3BA74;
 .wrapper {
     display: flex;
     flex-direction: column;
-    // background: linear-gradient(0deg, #0A1E27 0%, rgba(10, 30, 39, 0.40) 42.19%, rgba(10, 30, 39, 0.00) 68.23%);
+    overflow: hidden;
+    background: #0A1E27;
 }
 
 ._container {
     max-width: 1260px;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 0 15px;
 }
 
 .header {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background: url("../homeworkFinal/img/bg.png") lightgray 50%;
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
-    // background-attachment: fixed;
     padding-top: 20px;
 
     &__subtitle {
@@ -73,7 +73,6 @@ $yellow-subtitle: #D3BA74;
     &-right {
         margin-left: 51px;
     }
-
 
     &::before {
         content: "";
@@ -116,7 +115,13 @@ $yellow-subtitle: #D3BA74;
     font-weight: 600;
     line-height: 1.5;
     font-family: Poppins;
+
     /* 270px */
+    &-absolute {
+        position: absolute;
+        top: 20px;
+        left: 0;
+    }
 }
 
 .header__container {
@@ -135,30 +140,115 @@ $yellow-subtitle: #D3BA74;
 
 .main {
     flex: 0 1 auto;
-    background-color: #0A1E27;
+    // background-color: #0A1E27;
 
-    .one {
+    .one,
+    .three {
         display: flex;
         justify-content: space-between;
         position: relative;
         flex-direction: column;
-
+        margin-top: 80px;
 
 
         &__container {
-            margin: 160px 0 0 160px;
             display: flex;
             justify-content: space-between;
+            gap: 10px;
+            position: relative;
         }
 
-        &__digit {
-            position: absolute;
-            top: 20px;
-            left: 0;
+        &__head {
+            padding: 160px 0 0 160px;
         }
 
         &__title {
             margin: 12px 0 20px 0;
         }
+
+        &__img_item {
+            max-width: 100%;
+        }
+
+        &__img {
+            flex: 0 0 50%;
+
+        }
+
+        &__listimg {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin: 60px 0;
+
+            .one__items {
+                width: 299px;
+                height: 197px;
+            }
+        }
+    }
+
+    .two {
+        display: flex;
+        margin-top: 150px;
+        gap: 20px;
+
+        &__content {
+            position: relative;
+            padding: 130px 0 0 212px;
+        }
+
+        &__title {
+            margin-bottom: 20px;
+        }
+
+        &__img {
+            flex: 0 0 50%;
+
+            &-item {
+                max-width: 100%;
+            }
+        }
+    }
+
+    .total {
+        display: flex;
+        justify-content: center;
+        gap: 6.25rem;
+        align-items: center;
+        height: 25.8rem;
+        flex-wrap: wrap;
+
+        &__item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &__subtitle {}
+
+        &__subtitle::before {
+            display: none;
+        }
+
+        &__digit {
+            font-size: 6.25rem;
+            line-height: 6.875rem;
+        }
+
+
+    }
+
+    .explore {
+        display: flex;
+        gap: 7.87rem;
+        padding: 5rem 0;
+        border-top: 1px solid rgba(255, 255, 255, 0.20);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.20);
+
+        &__content {}
     }
 }
