--- a/homeworkFinal/style.scss
+++ b/homeworkFinal/style.scss
@@ -249,6 +249,47 @@ $yellow-subtitle: #D3BA74;
         border-top: 1px solid rgba(255, 255, 255, 0.20);
         border-bottom: 1px solid rgba(255, 255, 255, 0.20);
 
-        &__content {}
+        &__img {
+            width: 38.625rem;
+            height: 23.875rem;
+            flex: 1 0 50%;
+        }
+
+        &__img-item {
+            max-width: 100%;
+        }
+
+        &__content {
+            padding-top: 1.6rem;
+        }
+
+        &__title {
+            margin-bottom: 0.75rem;
+        }
+
+        &__text {
+            margin-bottom: 4rem;
+        }
+    }
+}
+
+.footer {
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 2.81rem 0;
+    }
+
+    &__social {
+        display: flex;
+        gap: 2.75rem;
+    }
+
+    &__social {
+        svg {
+            fill: #FFF;
+        }
     }
 }
