--- a/homeworkFinal/style.scss
+++ b/homeworkFinal/style.scss
@@ -171,7 +171,7 @@ $yellow-subtitle: #D3BA74;
         }
 
         &__img {
-            flex: 0 0 50%;
+            flex: 0 0 512px;
 
         }
 
