--- a/homeworkFinal/style.scss
+++ b/homeworkFinal/style.scss
@@ -213,6 +213,16 @@ $yellow-subtitle: #D3BA74;
         }
     }
 
+    .three__subtitle {
+
+        margin-left: 98px;
+
+    }
+
+    .three__head {
+        padding-top: 142px;
+    }
+
     .total {
         display: flex;
         justify-content: center;
