--- a/homeworkFinal/style.css
+++ b/homeworkFinal/style.css
@@ -321,6 +321,12 @@
 }
 .footer__social svg {
   fill: #FFF;
+  opacity: 0.5;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.footer__social svg:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 768px) {
