--- a/homeworkFinal/style.css
+++ b/homeworkFinal/style.css
@@ -28,7 +28,7 @@
 .header {
   min-height: 100vh;
   width: 100%;
-  background: url("../homeworkFinal/img/bg.png") lightgray 50%;
+  background: url("../homeworkFinal/img/bg.webp") lightgray 50%;
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
