--- a/homeworkFinal/style.scss
+++ b/homeworkFinal/style.scss
@@ -3,8 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Playfair+Display&family=Poppins:wght@300;400;600;700&display=swap');
 
 
-
-
 $yellow-subtitle: #D3BA74;
 
 * {
@@ -187,12 +185,18 @@ $yellow-subtitle: #D3BA74;
             justify-content: flex-start;
             align-items: center;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 10px;
             margin: 60px 0;
 
-            .one__items {
+            .one__items,
+            .three__items {
                 width: 299px;
                 height: 197px;
+                transition: all .2s ease-in-out;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
             }
         }
     }
