--- a/homeworkFinal/style.css
+++ b/homeworkFinal/style.css
@@ -85,6 +85,10 @@
 }
 
 .button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
   border-radius: 4px;
   border: 1px solid #FFF;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.1);
