--- a/homeworkjs12/style.css
+++ b/homeworkjs12/style.css
@@ -2,6 +2,8 @@ body {
     background-color: rgb(75, 197, 111);
     font-family: 'Roboto', sans-serif;
     margin: 0 auto;
+    transition: all 0.3s;
+
 }
 
 .first {
