--- a/homeworkjs12/style.css
+++ b/homeworkjs12/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(75, 197, 111);
+    background-color: rgb(72, 75, 73);
     font-family: 'Roboto', sans-serif;
     margin: 0 auto;
     transition: all 0.3s;
@@ -51,4 +51,6 @@ div.character:hover {
     color: rgb(34, 121, 121);
 }
 
-h1 {}
+.film_number {
+    display: inline-block;
+}
